added the check balance functionality and useState for handling constant changes

--- a/src/token_frontend/index.html
+++ b/src/token_frontend/index.html
@@ -5,12 +5,12 @@
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <title>DFaucet</title>
     <base href="/" />
-    <link rel="icon" href="favicon.ico" />
-    <link type="text/css" rel="stylesheet" href="main.css" />
+    <link rel="icon" href="/favicon.ico" />
+    <link rel="stylesheet" href="/main.css" />
   	<link id="external-css" rel="stylesheet" type="text/css" href="https://fonts.googleapis.com/css?family=Montserrat&amp;display=swap" media="all">
 </head>
   <body>
     <div id="root"></div>
-    <script src="../src/index.js" type="text/jsx"></script>
+    <script type="module" src="/src/index.jsx"></script>
   </body>
 </html>
